@@ -36,6 +36,8 @@ Data Crow version 4.10                        Released on 2023-08-xx
 - Client - Server: update all dialog won't open
 - Image importer parses incorrect resolution for image
 - File browser: file type description too long for field
+- Table view: tracks are not shown for music albums
+- Templates: sometimes template could not be selected when creating an item
 
 [TO DO]
 - Add help for image resizing
